[gd_scene load_steps=58 format=2]

[ext_resource path="res://Assets/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Assets/Hitbox-Hurtbox/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Hitbox-Hurtbox/PlayerAttackHitbox.gd" type="Script" id=4]
[ext_resource path="res://Assets/Effects/BlinkEffect.shader" type="Shader" id=5]
[ext_resource path="res://Assets/Hitbox-Hurtbox/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Shadows/ShadowVerySmall.png" type="Texture" id=7]
[ext_resource path="res://Assets/Effects/SwordSound.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Effects/dashSound.wav" type="AudioStream" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/blinking = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.33858
height = 1.89737

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/PlayerAttackHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("SwordSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.126535,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="Animation" id=4]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/PlayerAttackHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("SwordSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.122835,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="Animation" id=5]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/PlayerAttackHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("SwordSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.125795,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="Animation" id=6]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/PlayerAttackHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("SwordSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.127275,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=11]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=12]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=13]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "slide_end"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SlideSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="Animation" id=14]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "slide_end"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SlideSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="Animation" id=15]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "slide_end"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SlideSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="Animation" id=16]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "slide_end"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SlideSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "AttackLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "IdleDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( 0, -1.1 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( -0.2, 0.1 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0.4, -0.2 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "RunUp"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "SlideDown"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "SildeUp"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "SlideRight"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "SildeLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachine" id=43]
states/Attack/node = SubResource( 21 )
states/Attack/position = Vector2( 394.746, 127.259 )
states/Idle/node = SubResource( 26 )
states/Idle/position = Vector2( 147.7, 125.5 )
states/Run/node = SubResource( 31 )
states/Run/position = Vector2( 146.45, -7.5 )
states/Slide/node = SubResource( 36 )
states/Slide/position = Vector2( 147.075, 277.052 )
transitions = [ "Idle", "Run", SubResource( 37 ), "Run", "Idle", SubResource( 38 ), "Idle", "Slide", SubResource( 39 ), "Slide", "Idle", SubResource( 40 ), "Idle", "Attack", SubResource( 41 ), "Attack", "Idle", SubResource( 42 ) ]
start_node = "Idle"
graph_offset = Vector2( -470.09, -6.08184 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=44]

[sub_resource type="Animation" id=45]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/blinking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=46]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/blinking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=47]
radius = 4.0
height = 7.0

[sub_resource type="CapsuleShape2D" id=48]
radius = 2.35382
height = 2.25995

[node name="Player" type="KinematicBody2D"]
position = Vector2( -0.5, -2 )
collision_layer = 2
script = ExtResource( 1 )
MAX_SPEED = 60

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 7 )
offset = Vector2( 0.5, -2 )

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 4
lifetime = 0.15
explosiveness = 1.0
randomness = 0.2
local_coords = false
emission_shape = 1
emission_sphere_radius = 2.8
gravity = Vector2( 0, -98 )
angular_velocity = 1.0
angular_velocity_random = 0.5
linear_accel = 5.0
linear_accel_random = 0.5
scale_amount = 2.0
scale_amount_random = 0.85
color = Color( 0.94902, 0.87451, 0.772549, 0.764706 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 2 )
hframes = 6
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 3 )
anims/AttackLeft = SubResource( 4 )
anims/AttackRight = SubResource( 5 )
anims/AttackUp = SubResource( 6 )
anims/IdleDown = SubResource( 7 )
anims/IdleUp = SubResource( 8 )
anims/RunDown = SubResource( 9 )
anims/RunLeft = SubResource( 10 )
anims/RunRight = SubResource( 11 )
anims/RunUp = SubResource( 12 )
anims/SildeLeft = SubResource( 13 )
anims/SildeUp = SubResource( 14 )
anims/SlideDown = SubResource( 15 )
anims/SlideRight = SubResource( 16 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 43 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 44 )
parameters/Attack/blend_position = Vector2( -0.0970516, 0.439056 )
parameters/Idle/blend_position = Vector2( 0.0410628, 0.575966 )
parameters/Run/blend_position = Vector2( -0.00798523, -0.00116158 )
parameters/Slide/blend_position = Vector2( -0.022113, -0.54764 )

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 45 )
anims/Stop = SubResource( 46 )

[node name="Pivot" type="Position2D" parent="."]
rotation = -1.5708

[node name="PlayerAttackHitbox" parent="Pivot" instance=ExtResource( 3 )]
position = Vector2( 0, 9 )
collision_mask = 16
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="Pivot/PlayerAttackHitbox" index="0"]
shape = SubResource( 47 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.5, 0 )
shape = SubResource( 48 )

[node name="SwordSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0

[node name="SlideSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -4.782

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="end_invincibility" from="Hurtbox" to="." method="_on_Hurtbox_end_invincibility"]

[editable path="Pivot/PlayerAttackHitbox"]
[editable path="Hurtbox"]
